<resources>
    <string name="app_name">RacesClient</string>
    <string name="password">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="error_invalid_email">Email is invalid</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_or">or</string>
    <string name="or">or</string>
    <string name="profile">Profile</string>
    <string name="schedule">Schedule</string>
    <string name="exit">Exit</string>
    <string name="settings">Settings</string>
    <string name="drawer_header_title" translatable="false">Races Client</string>
    <string name="author_sign">Created by Oleg Lipskiy</string>
    <string name="races_schedule">Races Schedule</string>

    <string name="lorem" translatable="false">Lorem ipsum dolor sit amet, ferri legere et mei. Posse oblique pericula eam ne, libris partiendo interesset ea usu. Essent corrumpit an per, in prima melius qui. Ridens apeirian no mea, aliquip equidem sententiae id eum. Eum sonet graeco ei, te impedit delectus perfecto sit, ex suas ponderum tractatos qui. No atqui sensibus dissentiet mei, purto labores electram qui ut.

Mei ei nisl errem senserit. Atqui audiam at vim. No vix nonumes tacimates, quo ne soleat sapientem. Ad fabulas neglegentur eam, ius ne nibh prodesset. Rebum placerat pro at, has quot interesset ea. Id eius democritum quo. In sit appareat persecuti scribentur, in pri partem tibique nominati, sit et sumo commodo praesent.

Doming utroque propriae in eum. Quo eu molestie argumentum, ei est esse copiosae maiestatis. Pro eirmod pericula reprehendunt ne, in zril prompta postulant pri. Primis consectetuer cu pro. Ex percipit suavitate consequat vis, et causae persecuti vel, eam an solet probatus.

Vis id illud sensibus reformidans, impetus volutpat splendide vim an. Has cu doctus nusquam consequuntur. Vim essent dicunt eripuit ea, mazim audire ei nam. In nostrud facilis vim, eu dicant officiis contentiones duo. Sit ex graeci facilis disputando. Per paulo quando no. Ea vim altera labores fastidii.

Vis choro saepe no, dico facete mei cu. In iuvaret aliquam sit, sit postea nusquam erroribus te. In dicat persius sit. Clita veniam per an.</string>
    <string name="username_template" translatable="false">%s %s</string>
    <string name="profile_general">General</string>
    <string name="profile_history">History</string>
    <string name="filter">Filter</string>


    <string name="translation_name_auth_logo" translatable="false">AuthLogo</string>
    <string name="translation_name_edit_fab" translatable="false">EditFab</string>
    <string name="race">Race</string>
    <string name="participants">Participants</string>
    <string name="history_race_date">Date</string>
    <string name="history_bet">Bet</string>
    <string name="history_horse_name">Horse name</string>
    <string name="history_result">Result</string>
    <string name="add_bet">Add bet</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="change_email">Change Email</string>
    <string name="source_camera">Camera</string>
    <string name="source_gallery">Gallery</string>
    <string name="change_avatar">Change Avatar</string>

</resources>
