<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/holderAppBar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/transparent"
            app:elevation="0dp">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/holderCollapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_scrollFlags="scroll|snap"
                app:titleEnabled="false">
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/imProfileAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_logo"
                        app:layout_collapseMode="parallax"
                        />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:layout_marginStart="8dp"
                        android:gravity="center_vertical"
                        app:layout_scrollFlags="scroll"
                        android:layout_gravity="bottom"/>
                </FrameLayout>



                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbarProfile"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@color/transparent"
                    app:titleTextColor="@color/transparent"
                    app:navigationIcon="@drawable/ic_menu_black"
                    style="@style/ThemeOverlay.AppCompat.Light"/>



            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TabLayout
            android:id="@+id/holderProfileTabs"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="0"
            app:tabIndicatorColor="@color/black">

            <android.support.design.widget.TabItem
                android:id="@+id/tabGeneral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_general" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_history" />
        </android.support.design.widget.TabLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vProfilePager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:transitionName="@string/translation_name_edit_fab"
        android:layout_margin="10dp"
        app:backgroundTint="@color/white"
        android:src="@drawable/icv_edit"
        app:fabSize="normal"
        app:layout_anchor="@id/holderAppBar"
        app:layout_anchorGravity="bottom|right|end"
        tools:targetApi="lollipop" />

</android.support.design.widget.CoordinatorLayout>